# auto-medicine-dispenser

./: .gitignore  AI_CONTEXT.md  BACKUPS.md  CHANGES_OVERNIGHT.md  GPIO_LABELS.html  HOW_TO_USE.html  I2C_RACE_README.md  OVERNIGHT_FIX_REPORT.md  PROJECT_THEORY.html  README.md  REVIEW_SCRIPT.html  REVIEW_SCRIPT.md  WIRING_DIAGRAM.html  WORKFLOW.md  WORKFLOW_FULL.html  WORKFLOW_REPORT.html  _cap3.py  _cap4.py  _cap5.py  _cap6.py  _cap_full.py  _cap_live.py  _cap_long.py  _cap_now.py  _cap_run.py  _cap_test.py  _cap_vl53.py  _capture2.py  _capture_revert.py  _capture_serial.py  _live.py  _overnight.py  build.bat  build_flash_monitor.bat  build_tca_err.txt  cd_fresh.txt  cd_full.txt  cd_info_utf8.txt  coredump2.txt  coredump_dump.txt  (+121 more)
.claude/: settings.local.json
backup_camera_working_c33bc77/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
backup_camera_working_c33bc77/main/: Adafruit_GFX.h  cloud_secrets.h  dfplayer.c  dispenser_scheduler.c  ds3231.c  ds3231.h  ft6336u.c  i2c_manager.h  idf_component.yml  jpeg_encoder.c  jpeg_encoder.h  netpie_mqtt.c  netpie_mqtt.h  offline_sync.c  pca9685.c  pcf8574.h  pill_sensor_status.h  sd_card.c  tca9548a.c  telegram_bot.c  telegram_bot.h  ui_confirm.cpp  ui_meds_thai_labels.h  ui_settings.cpp  ui_settings_thai_labels.h  ui_setup_meds.cpp  ui_standby.cpp  ui_utf8_text.h  ui_wifi.cpp  vl53l0x_multi.c  web_handlers_status.c  web_log.c  web_log.h  wifi_sta.c  wifi_sta.h
c3_vl53_bridge/: c3_vl53_bridge.ino
components/esp_driver_i2c/: i2c_master.c
main/: CMakeLists.txt  bridge_vl53.c  bridge_vl53.h  camera_init.c  camera_init.h  cloud_secrets.c  cloud_secrets.h  config.h  dfplayer.c  dfplayer.h  dispenser_scheduler.c  dispenser_scheduler.h  display_clock.cpp  display_clock.cpp.bak  display_clock.h  ds3231.c  ds3231.h  ft6336u.c  ft6336u.h  i2c_manager.c  i2c_manager.h  idf_component.yml  idle_music.c  idle_music.h  index_html.h  jpeg_encoder.c  jpeg_encoder.h  main.c  netpie_mqtt.c  netpie_mqtt.h  offline_sync.c  offline_sync.h  pca9685.c  pca9685.h  pcf8574.c  pcf8574.h  pill_sensor_status.c  pill_sensor_status.h  sd_card.h  tca9548a.c  (+36 more)
patches/: i2c_master_state_reset_retry.patch  ov5647_pid_relax.patch  sccb_i2c_invalid_state_retry.patch
thesis/: check_specific.py  generate_circuit_diagrams.py  generate_cloud_architecture.py  generate_system_flowchart.py  generate_watchdog_diagram.py  inspect_docx.py  sensor_theory.html  บทที่_1_บทนำ.md  บทที่_2_ขยายจาก_2.2.3.md
tools/: gen_ui_keyboard_thai_labels.ps1  gen_ui_utf8_font.ps1
